<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P2P Navigation</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="create_space">Create Space</string>
    <string name="join_space">Join Space</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="Create_new_file">Create a new File</string>
    <string name="leave_space">Leave Space</string>
    <string name="list_of_file">File Handling/Sharing</string>
    <string name="connect_server">Connect Server</string>
    <string name="quit">Quit</string>
    <string name="debug">Debug</string>

    <string name="new_user">New User</string>

</resources>
